--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "kisitlamalar",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "1 Mart kısıtlamaları",
   "author": "Hasan Kürşat Küçüköztaş",
   "homepage": "http://hassan1903.github.io/kisitlamalar",
-  "keywords": [],
-  "main": "src/index.js",
   "dependencies": {
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-scripts": "4.0.3",
     "react-select": "2.4.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gh-pages": "^3.0.0"
+  },
   "scripts": {
     "predeploy": "yarn build",
     "deploy": "gh-pages -d build",
