--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
   "name": "kisitlamalar",
   "version": "1.0.1",
+  "homepage": "https://hassan1903.github.io/kisitlamalar",
   "description": "1 Mart kısıtlamaları",
   "author": "Hasan Kürşat Küçüköztaş",
-  "homepage": "http://hassan1903.github.io/kisitlamalar",
+  "keywords": [],
+  "main": "src/index.js",
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "2.0.3",
     "react-select": "2.4.4"
   },
   "devDependencies": {
-    "gh-pages": "^3.0.0"
+    "gh-pages": "^3.1.0"
   },
   "scripts": {
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     ">0.2%",
