--- a/package.json
+++ b/package.json
@@ -2,24 +2,27 @@
   "name": "kisitlamalar",
   "version": "1.0.0",
   "homepage": "https://hassan1903.github.io/kisitlamalar",
-  "description": "",
+  "description": "1 Mart kısıtlamaları",
+  "author": "Hasan Kürşat Küçüköztaş",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
     "gh-pages": "^3.1.0",
-    "react": "next",
-    "react-dom": "next",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-scripts": "2.0.3",
     "react-select": "2.4.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "predeploy": "yarn build",
     "deploy": "gh-pages -d build"
   },
   "browserslist": [
