--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   "main": "src/index.js",
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
-    "gh-pages": "^3.1.0",
+    "cheerio": "1.0.0-rc.5",
+    "moment": "2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-scripts": "2.0.3",
     "react-select": "2.4.4"
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
