--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "main": "src/index.js",
   "dependencies": {
     "antd": "4.13.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015": "6.24.1",
     "cheerio": "1.0.0-rc.5",
     "moment": "2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-ga": "3.3.0",
     "react-scripts": "2.0.3"
   },
   "devDependencies": {
