--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-ga": "3.3.0",
-    "react-scripts": "2.0.3"
+    "react-scripts": "2.0.3",
+    "recharts": "2.0.8"
   },
   "devDependencies": {
     "gh-pages": "3.1.0"
